--- a/index.css
+++ b/index.css
@@ -5,6 +5,12 @@ html, body {
     height: 100%;
     margin: 0;
     background-color: black;
+    overflow: hidden;
+}
+
+* {
+    color:white;
+    font-family: "Roboto Mono", monospace;
 }
 
 #start {
@@ -12,7 +18,23 @@ html, body {
     justify-content: center;
     align-items: center;
     height: 100%;
-    transition: height 500ms;
+    width: 100%;
+    transition: height 1000ms;
+    z-index: 1000;
+    /* z-index: -1; */
+    position: absolute;
+    background-color: black;
+    border-bottom: gray 1px solid;
+}
+
+footer {
+    position: absolute;
+    background-color: black;
+    z-index: 999;
+    border-top: gray 1px solid;
+    bottom:0;
+    width: 100%;
+    height: 10%;
 }
 
 #start.active{
@@ -44,4 +66,70 @@ html, body {
     white-space: pre;
     font-family: "Roboto Mono", monospace;
     font-size: 40px;
+}
+
+#next {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    position: absolute;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
+#next::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
+
+#next #long {
+    height: calc(100% + 20px);
+    width: 10px;
+    position: absolute;
+}
+
+#next div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: top 1000ms;
+}
+
+#next div .label {
+    font-size: 30px;
+}
+
+#next div .content{
+    display: none;
+}
+
+#next div .content.active {
+    display: block;
+}
+
+.pos1 {
+    top:30%;
+}
+
+.pos2 {
+    top: 50%;
+}
+
+.pos3 {
+    top: 70%;
+}
+
+.pos4 {
+    top: 90%;
+}
+
+.pos5 {
+    top: 10%;
+}
+
+.notransition {
+    transition: none !important;
 }
