--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
+    padding: 0;
     background-color: black;
     overflow: hidden;
 }
@@ -28,13 +29,15 @@ html, body {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     background-color: black;
     z-index: 999;
     border-top: gray 1px solid;
     bottom:0;
     width: 100%;
     height: 10%;
+    margin: 0;
+    padding: 0;
 }
 
 #start.active{
@@ -132,4 +135,25 @@ footer {
 
 .notransition {
     transition: none !important;
+}
+
+#nav {
+    position: fixed;
+    top: 50%;
+    left: 10%;
+    transform: translateY(50%);
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    z-index: 1;
+}
+
+#nav button {
+    background-color: black;
+    border-radius: 40%;
+    border: 1px solid white;
+    font-size: 25px;
+    width: 40px;
+    height: 40px;
+    padding:0;
 }
